# graphics_labs

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerSettings.cmake  CompilerWarnings.cmake  Sanitizers.cmake  Slang.cmake
labs/Basic/: CMakeLists.txt
labs/Basic/shaders/modules/: GridCommon.slang
labs/Basic/shaders/src/Tonemapping/: TonemappingVertex.slang
labs/Basic/src/: InfiniteGrid.cpp  InfiniteGrid.h  main.cpp
labs/enger/: CMakeLists.txt  README.md
labs/enger/shaders/: colored_triangle.slang  compile.bat  gradient.slang  mesh.slang
labs/enger/shaders/Tonemapping/: Reinhard.slang
labs/enger/shaders/modules/: TonemappingCommon.slang
labs/enger/shaders/src/: mesh.slang
labs/enger/shaders/src/Grid/: Grid.slang
labs/enger/shaders/src/Tonemapping/: ACES.slang  Reinhard.slang  TonemappingVertex.slang
labs/enger/src/: Camera.cpp  Camera.h  FileLoader.h  Framing.cpp  Framing.h  GlfwWindow.h  Imgui.cpp  Imgui.h  MeshLoader.cpp  MeshLoader.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h  main.cpp
labs/enger/src/Logging/: Assert.h  Log.h
labs/enger/src/Profiling/: Profiler.h
labs/enger/src/Renderer/: Imgui.cpp  Imgui.h  Renderer.cpp  Renderer.h
labs/enger/src/Resources/: Resources.cpp  Resources.h
labs/enger/src/Scene/: SceneGraph.cpp  SceneManager.cpp  SceneManager.h
labs/enger/src/Utils/: InplaceVector.h  Uuid.h
labs/enger/src/vulkan/: Allocator.cpp  Allocator.h  Commands.cpp  Commands.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  GpuResourceTypes.cpp  GpuResourceTypes.h  Instance.cpp  Pipeline.h  Queue.cpp  Queue.h  QueueSubmitBuilder.cpp  QueueSubmitBuilder.h  Surface.h  SwapChain.cpp  SwapChain.h  vk.cpp  vk.h
libs/: CMakeLists.txt
libs/enger/: CMakeLists.txt  README.md
libs/enger/src/: FileLoader.cpp  FileLoader.h  Framing.cpp  Framing.h  GlfwWindow.h  MeshLoader.cpp  MeshLoader.h  Stats.h  Window.cpp  Window.h
libs/enger/src/Logging/: Log.h
libs/enger/src/Profiling/: Profiler.h
libs/enger/src/Renderer/: FrameGraph.cpp  FrameGraph.h  Imgui.cpp  Imgui.h  Renderer.cpp  Renderer.h  Renderpass.h
libs/enger/src/Resources/: Resources.h
libs/enger/src/Scene/: Camera.cpp  Camera.h  SceneGraph.h  SceneManager.cpp  SceneManager.h
libs/enger/src/Utils/: InplaceVector.h  KeyCodes.h  Random.h  Spirv.h  Uuid.h
libs/enger/src/vulkan/: Allocator.cpp  Commands.cpp  Commands.h  Descriptors.cpp  Device.cpp  Device.h  GpuResourceTypes.h  Instance.h  Pipeline.h  PushConstantRanges.h  QueueSubmitBuilder.cpp  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  vk.h
overlay-ports/imgui/: imgui-config.cmake.in
tests/: CMakeLists.txt
tests/EngerTests/: CMakeLists.txt
tests/EngerTests/src/: TestRandom.cpp  TestUuid.cpp
